# nns-and-clustering-methods

./: .gitignore  CMakeLists.txt  Image.py  Makefile  README.md  autoencoder.py  cluster.conf  reduce.py  requirements.txt  stats.txt
datasets/: query_out  train_out
include/: Cluster.hpp  Dist.hpp  ErrExit.h  FFunc.hpp  GFunc.hpp  HFunc.hpp  Hypercube.hpp  IDX.hpp  Image.hpp  LSH.hpp  ModOp.hpp
modules/: Cluster.cpp  Dist.cpp  FFunc.cpp  GFunc.cpp  HFunc.cpp  Hypercube.cpp  IDX.cpp  Image.cpp  LSH.cpp
python/: Image.py  autoencoder.py  classification.py  dist.py  idx.py  reduce.py  search.py  weights-2-32-64-1-30-32.h5
src/: search.cpp
src/main/: Cluster.cpp  Dist.cpp  FFunc.cpp  GFunc.cpp  HFunc.cpp  Hypercube.cpp  Image.cpp  LSH.cpp  ModOp.cpp  cluster.cpp  search.cpp
src/test/: Cluster_test.cpp  Dist_test.cpp
src/test/input/: parse_cluster_input_1.txt  parse_cluster_input_2.txt  silhouette_1.txt
tests/: Dist_test.cpp
